[gd_scene load_steps=4 format=2]

[ext_resource path="res://challenges/week9/scenes/item/item.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/sfx/clics/click_key.wav" type="AudioStream" id=2]
[ext_resource path="res://challenges/week9/scenes/wheel/wheel.gd" type="Script" id=5]

[node name="wheel" type="Node2D"]
position = Vector2( 510, 336 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="items" type="Node2D" parent="."]

[node name="item_up" parent="items" instance=ExtResource( 1 )]
position = Vector2( 0, -200 )

[node name="item_middle" parent="items" instance=ExtResource( 1 )]
position = Vector2( 0, -100 )

[node name="item_down" parent="items" instance=ExtResource( 1 )]

[node name="run_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="wheel_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Wheel_turning_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="wheel_timer" to="." method="_on_wheel_timer_timeout"]
